// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RadioGroup > should match its default snapshot 1`] = `
<div
  class="flex gap-4"
  data-id="sds-radio-group"
  id="v-0"
>
  
  <div
    class="flex gap-2 items-start"
  >
    <input
      class="relative top-1 sds-theme-plaid:rounded-none"
      id="v-0__option_0"
      name="v-0__option"
      type="radio"
      value="Option 1"
    />
    <!-- @slot Label content (used to replace label element). @binding optionId, option -->
    
    <label
      class=""
      for="v-0__option_0"
    >
      <span>
        Option 1
      </span>
    </label>
    
  </div>
  <div
    class="flex gap-2 items-start"
  >
    <input
      class="relative top-1 sds-theme-plaid:rounded-none"
      id="v-0__option_1"
      name="v-0__option"
      type="radio"
      value="Option 2"
    />
    <!-- @slot Label content (used to replace label element). @binding optionId, option -->
    
    <label
      class=""
      for="v-0__option_1"
    >
      <span>
        Option 2
      </span>
    </label>
    
  </div>
  <div
    class="flex gap-2 items-start"
  >
    <input
      class="relative top-1 sds-theme-plaid:rounded-none"
      id="v-0__option_2"
      name="v-0__option"
      type="radio"
      value="Option 3"
    />
    <!-- @slot Label content (used to replace label element). @binding optionId, option -->
    
    <label
      class=""
      for="v-0__option_2"
    >
      <span>
        Option 3
      </span>
    </label>
    
  </div>
  
</div>
`;

exports[`RadioGroup > should match its snapshot with assigned \`disabled\` prop 1`] = `
<div
  class="flex gap-4"
  data-id="sds-radio-group"
  id="v-0"
>
  
  <div
    class="flex gap-2 items-start"
  >
    <input
      class="relative top-1 sds-theme-plaid:rounded-none"
      disabled=""
      id="v-0__option_0"
      name="v-0__option"
      type="radio"
      value="Option 1"
    />
    <!-- @slot Label content (used to replace label element). @binding optionId, option -->
    
    <label
      class="opacity-50 pointer-events-none select-none"
      for="v-0__option_0"
    >
      <span>
        Option 1
      </span>
    </label>
    
  </div>
  <div
    class="flex gap-2 items-start"
  >
    <input
      class="relative top-1 sds-theme-plaid:rounded-none"
      disabled=""
      id="v-0__option_1"
      name="v-0__option"
      type="radio"
      value="Option 2"
    />
    <!-- @slot Label content (used to replace label element). @binding optionId, option -->
    
    <label
      class="opacity-50 pointer-events-none select-none"
      for="v-0__option_1"
    >
      <span>
        Option 2
      </span>
    </label>
    
  </div>
  <div
    class="flex gap-2 items-start"
  >
    <input
      class="relative top-1 sds-theme-plaid:rounded-none"
      disabled=""
      id="v-0__option_2"
      name="v-0__option"
      type="radio"
      value="Option 3"
    />
    <!-- @slot Label content (used to replace label element). @binding optionId, option -->
    
    <label
      class="opacity-50 pointer-events-none select-none"
      for="v-0__option_2"
    >
      <span>
        Option 3
      </span>
    </label>
    
  </div>
  
</div>
`;

exports[`RadioGroup > should match its snapshot with assigned \`invalid\` prop 1`] = `
<div
  class="flex gap-4"
  data-id="sds-radio-group"
  id="v-0"
>
  
  <div
    class="flex gap-2 items-start"
  >
    <input
      class="relative top-1 sds-theme-plaid:rounded-none invalid"
      id="v-0__option_0"
      name="v-0__option"
      type="radio"
      value="Option 1"
    />
    <!-- @slot Label content (used to replace label element). @binding optionId, option -->
    
    <label
      class=""
      for="v-0__option_0"
    >
      <span>
        Option 1
      </span>
    </label>
    
  </div>
  <div
    class="flex gap-2 items-start"
  >
    <input
      class="relative top-1 sds-theme-plaid:rounded-none invalid"
      id="v-0__option_1"
      name="v-0__option"
      type="radio"
      value="Option 2"
    />
    <!-- @slot Label content (used to replace label element). @binding optionId, option -->
    
    <label
      class=""
      for="v-0__option_1"
    >
      <span>
        Option 2
      </span>
    </label>
    
  </div>
  <div
    class="flex gap-2 items-start"
  >
    <input
      class="relative top-1 sds-theme-plaid:rounded-none invalid"
      id="v-0__option_2"
      name="v-0__option"
      type="radio"
      value="Option 3"
    />
    <!-- @slot Label content (used to replace label element). @binding optionId, option -->
    
    <label
      class=""
      for="v-0__option_2"
    >
      <span>
        Option 3
      </span>
    </label>
    
  </div>
  
</div>
`;

exports[`RadioGroup > should match its snapshot with assigned \`name\` prop 1`] = `
<div
  class="flex gap-4"
  data-id="sds-radio-group"
  id="v-0"
>
  
  <div
    class="flex gap-2 items-start"
  >
    <input
      class="relative top-1 sds-theme-plaid:rounded-none"
      id="v-0__option_0"
      name="options-group"
      type="radio"
      value="Option 1"
    />
    <!-- @slot Label content (used to replace label element). @binding optionId, option -->
    
    <label
      class=""
      for="v-0__option_0"
    >
      <span>
        Option 1
      </span>
    </label>
    
  </div>
  <div
    class="flex gap-2 items-start"
  >
    <input
      class="relative top-1 sds-theme-plaid:rounded-none"
      id="v-0__option_1"
      name="options-group"
      type="radio"
      value="Option 2"
    />
    <!-- @slot Label content (used to replace label element). @binding optionId, option -->
    
    <label
      class=""
      for="v-0__option_1"
    >
      <span>
        Option 2
      </span>
    </label>
    
  </div>
  <div
    class="flex gap-2 items-start"
  >
    <input
      class="relative top-1 sds-theme-plaid:rounded-none"
      id="v-0__option_2"
      name="options-group"
      type="radio"
      value="Option 3"
    />
    <!-- @slot Label content (used to replace label element). @binding optionId, option -->
    
    <label
      class=""
      for="v-0__option_2"
    >
      <span>
        Option 3
      </span>
    </label>
    
  </div>
  
</div>
`;

exports[`RadioGroup > should match its snapshot with assigned \`required\` prop 1`] = `
<div
  class="flex gap-4"
  data-id="sds-radio-group"
  id="v-0"
>
  
  <div
    class="flex gap-2 items-start"
  >
    <input
      class="relative top-1 sds-theme-plaid:rounded-none"
      id="v-0__option_0"
      name="v-0__option"
      type="radio"
      value="Option 1"
    />
    <!-- @slot Label content (used to replace label element). @binding optionId, option -->
    
    <label
      class=""
      for="v-0__option_0"
    >
      <span>
        Option 1
      </span>
    </label>
    
  </div>
  <div
    class="flex gap-2 items-start"
  >
    <input
      class="relative top-1 sds-theme-plaid:rounded-none"
      id="v-0__option_1"
      name="v-0__option"
      type="radio"
      value="Option 2"
    />
    <!-- @slot Label content (used to replace label element). @binding optionId, option -->
    
    <label
      class=""
      for="v-0__option_1"
    >
      <span>
        Option 2
      </span>
    </label>
    
  </div>
  <div
    class="flex gap-2 items-start"
  >
    <input
      class="relative top-1 sds-theme-plaid:rounded-none"
      id="v-0__option_2"
      name="v-0__option"
      type="radio"
      value="Option 3"
    />
    <!-- @slot Label content (used to replace label element). @binding optionId, option -->
    
    <label
      class=""
      for="v-0__option_2"
    >
      <span>
        Option 3
      </span>
    </label>
    
  </div>
  
</div>
`;

exports[`RadioGroup > should match its snapshot with assigned \`stacked\` prop 1`] = `
<div
  class="flex flex-col gap-2"
  data-id="sds-radio-group"
  id="v-0"
>
  
  <div
    class="flex gap-2 items-start"
  >
    <input
      class="relative top-1 sds-theme-plaid:rounded-none"
      id="v-0__option_0"
      name="v-0__option"
      type="radio"
      value="Option 1"
    />
    <!-- @slot Label content (used to replace label element). @binding optionId, option -->
    
    <label
      class=""
      for="v-0__option_0"
    >
      <span>
        Option 1
      </span>
    </label>
    
  </div>
  <div
    class="flex gap-2 items-start"
  >
    <input
      class="relative top-1 sds-theme-plaid:rounded-none"
      id="v-0__option_1"
      name="v-0__option"
      type="radio"
      value="Option 2"
    />
    <!-- @slot Label content (used to replace label element). @binding optionId, option -->
    
    <label
      class=""
      for="v-0__option_1"
    >
      <span>
        Option 2
      </span>
    </label>
    
  </div>
  <div
    class="flex gap-2 items-start"
  >
    <input
      class="relative top-1 sds-theme-plaid:rounded-none"
      id="v-0__option_2"
      name="v-0__option"
      type="radio"
      value="Option 3"
    />
    <!-- @slot Label content (used to replace label element). @binding optionId, option -->
    
    <label
      class=""
      for="v-0__option_2"
    >
      <span>
        Option 3
      </span>
    </label>
    
  </div>
  
</div>
`;

exports[`RadioGroup > should match its snapshot with assigned \`valid\` prop 1`] = `
<div
  class="flex gap-4"
  data-id="sds-radio-group"
  id="v-0"
>
  
  <div
    class="flex gap-2 items-start"
  >
    <input
      class="relative top-1 sds-theme-plaid:rounded-none valid"
      id="v-0__option_0"
      name="v-0__option"
      type="radio"
      value="Option 1"
    />
    <!-- @slot Label content (used to replace label element). @binding optionId, option -->
    
    <label
      class=""
      for="v-0__option_0"
    >
      <span>
        Option 1
      </span>
    </label>
    
  </div>
  <div
    class="flex gap-2 items-start"
  >
    <input
      class="relative top-1 sds-theme-plaid:rounded-none valid"
      id="v-0__option_1"
      name="v-0__option"
      type="radio"
      value="Option 2"
    />
    <!-- @slot Label content (used to replace label element). @binding optionId, option -->
    
    <label
      class=""
      for="v-0__option_1"
    >
      <span>
        Option 2
      </span>
    </label>
    
  </div>
  <div
    class="flex gap-2 items-start"
  >
    <input
      class="relative top-1 sds-theme-plaid:rounded-none valid"
      id="v-0__option_2"
      name="v-0__option"
      type="radio"
      value="Option 3"
    />
    <!-- @slot Label content (used to replace label element). @binding optionId, option -->
    
    <label
      class=""
      for="v-0__option_2"
    >
      <span>
        Option 3
      </span>
    </label>
    
  </div>
  
</div>
`;
